--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
 
             <div class="flex-1 relative">
                 <div class="relative z-10 rounded-2xl overflow-hidden shadow-2xl">
-                    <img src="https://picsum.photos/seed/pascoli/800/1000" alt="Giovanni Pascoli" class="w-full h-auto grayscale hover:grayscale-0 transition-all duration-700">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhFprqgZSIdE_qTdwuoYUCVC85wIEI7QutZyAiu9wNiyn4hKKIic0WxfmaVwcvMooqYhjs7P7ECzwZbdE8jTNG2hDLUH_rRhG9as9Sje31zdiXceGrlFAbIYgk88WRPMuE0pb8XUbhc-2vf/s1600/pascoli3.jpg"
+     alt="Giovanni Pascoli"
+     class="w-full h-auto grayscale hover:grayscale-0 transition-all duration-700">
+
                     <div class="absolute inset-0 bg-emerald-900/10 mix-blend-multiply"></div>
                 </div>
             </div>
