--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="it">
 <head>
     <meta charset="UTF-8">
@@ -70,15 +70,15 @@
                     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhFprqgZSIdE_qTdwuoYUCVC85wIEI7QutZyAiu9wNiyn4hKKIic0WxfmaVwcvMooqYhjs7P7ECzwZbdE8jTNG2hDLUH_rRhG9as9Sje31zdiXceGrlFAbIYgk88WRPMuE0pb8XUbhc-2vf/s1600/pascoli3.jpg" alt="Ritratto di Giovanni Pascoli" class="w-full h-full object-cover grayscale opacity-90 hover:grayscale-0 hover:opacity-100 transition-all duration-1000">
                 </div>
                 <div class="absolute -bottom-6 -left-6 bg-white p-6 rounded-2xl shadow-lg border border-emerald-50 max-w-[200px]">
-                    <p class="text-[10px] uppercase font-bold text-emerald-600 mb-2">Simbolo</p>
-                    <p class="text-sm italic text-stone-700">"La siepe: ciò che chiude e protegge il nido."</p>
+                    <p class="text-[10px] uppercase font-bold text-emerald-600 mb-2">Autoritratto</p>
+                    <p class="text-sm italic text-stone-700">"Io non sono mai cresciuto: sono rimasto un fanciullo."</p>
                 </div>
             </div>
         </div>
     </header>
 
     <!-- Sezione Vita -->
-    <section id="vita" class="py-32 bg-white">
+    <section id="vita" class="py-32 bg-white border-b border-stone-100">
         <div class="max-w-7xl mx-auto px-6">
             <div class="flex flex-col md:flex-row gap-16">
                 <div class="md:w-1/3 space-y-6 reveal">
@@ -248,17 +248,64 @@
         </div>
     </section>
 
-    <!-- Poesia -->
-    <section id="poesia" class="py-32 bg-stone-50 border-y border-stone-200">
-        <div class="max-w-3xl mx-auto px-6 text-center">
-            <div class="mb-12">
-                <h2 class="text-4xl serif font-bold mb-2 text-stone-800">X Agosto</h2>
-                <p class="text-emerald-600 text-sm uppercase tracking-widest font-bold">Myricae</p>
+    <!-- Sezione Poesia con Analisi -->
+    <section id="poesia" class="py-32 bg-stone-100">
+        <div class="max-w-7xl mx-auto px-6">
+            <div class="text-center mb-16 reveal">
+                <h2 class="text-4xl md:text-5xl serif font-bold text-stone-900">X Agosto</h2>
+                <p class="text-emerald-600 font-bold text-xs uppercase tracking-widest mt-4">Analisi del Testo</p>
+                <div class="h-1 w-20 bg-emerald-500 mx-auto mt-6"></div>
             </div>
-            <div class="space-y-8 font-serif text-xl md:text-2xl leading-[1.8] text-stone-700 italic border-l-4 border-emerald-100 pl-8 md:pl-0 md:border-0">
-                <p>San Lorenzo, io lo so perché tanto<br/>di stelle per l'aria tranquilla<br/>arde e cade, perché si gran pianto<br/>nel concavo cielo sfavilla.</p>
-                <p>Ritornava una rondine al tetto:<br/>l'uccisero: cadde tra spini:<br/>ella aveva nel becco un insetto:<br/>la cena dei suoi rondinini.</p>
-                <p>Ora è là, come in croce, che tende<br/>quel verme a quel cielo lontano;<br/>e il suo nido è nell'ombra, che attende,<br/>que pigola sempre più piano.</p>
+
+            <div class="grid md:grid-cols-2 gap-12 lg:gap-24 items-start">
+                <!-- Colonna 1: Testo -->
+                <div class="bg-white p-10 md:p-16 rounded-[3rem] shadow-xl reveal">
+                    <div class="space-y-8 font-serif text-xl leading-[1.8] text-stone-700 italic">
+                        <p>San Lorenzo, io lo so perché tanto<br/>di stelle per l'aria tranquilla<br/>arde e cade, perché si gran pianto<br/>nel concavo cielo sfavilla.</p>
+                        <p>Ritornava una rondine al tetto:<br/>l'uccisero: cadde tra spini:<br/>ella aveva nel becco un insetto:<br/>la cena dei suoi rondinini.</p>
+                        <p>Ora è là, come in croce, che tende<br/>quel verme a quel cielo lontano;<br/>e il suo nido è nell'ombra, che attende,<br/>che pigola sempre più piano.</p>
+                        <p>Anche un uomo tornava al suo nido:<br/>l'uccisero: disse: Perdono;<br/>e restò negli aperti occhi un grido:<br/>portava due bambole in dono...</p>
+                    </div>
+                </div>
+
+                <!-- Colonna 2: Analisi -->
+                <div class="space-y-10 reveal" style="transition-delay: 200ms;">
+                    <div>
+                        <h4 class="text-emerald-700 font-bold uppercase text-xs tracking-widest mb-4">Tematica Centrale</h4>
+                        <h3 class="text-3xl serif font-bold text-stone-900 mb-4">Il parallelismo rondine-padre</h3>
+                        <p class="text-stone-600 leading-relaxed">
+                            La poesia è costruita su una simmetria perfetta tra il sacrificio della rondine e quello del padre Ruggero. Entrambi tornano al proprio "nido" portando il sostentamento per i propri piccoli, ed entrambi vengono uccisi crudelmente, lasciando i propri cari in un'attesa disperata e vana.
+                        </p>
+                    </div>
+
+                    <div class="grid gap-6">
+                        <div class="flex gap-4">
+                            <div class="shrink-0 w-8 h-8 rounded-full bg-emerald-100 flex items-center justify-center text-emerald-700 font-bold text-sm">1</div>
+                            <div>
+                                <h5 class="font-bold text-stone-800 mb-1">Il Simbolismo Cristiano</h5>
+                                <p class="text-sm text-stone-500 leading-relaxed">L'immagine della rondine "come in croce" e il "perdono" pronunciato dall'uomo vittima innocente elevano il lutto privato a una dimensione sacrale di martirio.</p>
+                            </div>
+                        </div>
+                        <div class="flex gap-4">
+                            <div class="shrink-0 w-8 h-8 rounded-full bg-emerald-100 flex items-center justify-center text-emerald-700 font-bold text-sm">2</div>
+                            <div>
+                                <h5 class="font-bold text-stone-800 mb-1">Il Cosmo Indifferente</h5>
+                                <p class="text-sm text-stone-500 leading-relaxed">Le stelle che cadono sono un "gran pianto" del cielo, ma un pianto che sottolinea l'infinita distanza tra il dolore umano e la fredda immensità dell'universo.</p>
+                            </div>
+                        </div>
+                        <div class="flex gap-4">
+                            <div class="shrink-0 w-8 h-8 rounded-full bg-emerald-100 flex items-center justify-center text-emerald-700 font-bold text-sm">3</div>
+                            <div>
+                                <h5 class="font-bold text-stone-800 mb-1">La Fragilità del Nido</h5>
+                                <p class="text-sm text-stone-500 leading-relaxed">Il nido (sia quello degli uccelli che quello domestico) è il luogo della protezione che però si rivela impotente contro la violenza cieca del male esterno.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="p-6 bg-white rounded-2xl border border-emerald-100 italic text-stone-600 text-sm">
+                        "La poesia trasforma il ricordo biografico della morte del padre in un lamento universale sull'ingiustizia e sulla solitudine dell'essere umano."
+                    </div>
+                </div>
             </div>
         </div>
     </section>
