--- a/index.html
+++ b/index.html
@@ -323,7 +323,6 @@
             
             <div class="reveal" style="transition-delay: 200ms;">
                 <div class="aspect-video w-full rounded-[2.5rem] overflow-hidden shadow-2xl border-8 border-stone-50">
-                    <!-- Link YouTube Aggiornato -->
                     <iframe 
                         class="w-full h-full" 
                         src="https://www.youtube.com/embed/0fs87otyv_M" 
@@ -340,8 +339,11 @@
 
     <!-- Footer -->
     <footer class="py-20 border-t border-stone-200 bg-stone-50">
-        <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-8">
-            <p class="text-stone-400 text-xs font-medium tracking-widest uppercase">© Giovanni Pascoli - Progetto Didattico</p>
+        <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-8 text-center md:text-left">
+            <div>
+                <p class="text-stone-400 text-xs font-medium tracking-widest uppercase">© Giovanni Pascoli - Progetto Didattico</p>
+                <p class="text-stone-300 text-[10px] mt-1 uppercase tracking-widest font-bold">curato da Giuseppe Ferrazzano</p>
+            </div>
             <div class="flex gap-8">
                 <a href="#home" class="text-stone-400 hover:text-emerald-700 transition-colors uppercase text-[10px] font-bold tracking-widest">Opere</a>
                 <a href="#vita" class="text-stone-400 hover:text-emerald-700 transition-colors uppercase text-[10px] font-bold tracking-widest">Biografia</a>
